<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eBus</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="my_booking">My Booking</string>
    <string name="title_activity_about">About</string>

    <string name="facebook_app_id">252918985260446</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="event">Event</string>
    <string name="station">Station</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="languages">Languages</string>
    <string name="feedback">Feedback</string>
    <string name="helps">Helps</string>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="set_ticket">Set Ticket</string>
    <string name="_1_ticket">1 Ticket</string>
    <string name="_2_ticket">2 Ticket</string>
    <string name="_3_ticket">3 Ticket</string>
    <string name="_4_ticket">4 Ticket</string>
    <string name="_5_ticket">5 Ticket</string>
    <string name="pay_money">Pay Money</string>
    <string name="enter_code_card">Enter Code Card</string>
    <string name="pay">Pay</string>
    <string name="target">target</string>
    <string name="date">Date</string>
    <string name="full_name">Full name</string>
    <string name="all_ticket_booking">All ticket booking</string>
    <string name="recent_booking">Recently booking</string>

    <string name="date_of_booking">Date of booking</string>
    <string name="search_for_ticket">Search for ticket</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="scr">Scr</string>
    <string name="des">des</string>
    <string name="to">To</string>
    <string name="hour">Hour</string>

    <string name="ticket">Ticket</string>
    <string name="number">Number</string>

    <string name="welcome_to_ebus">Welcome to eBus</string>
    <string name="gmail_or_phone">Email</string>
    <string name="title_of_traveling">title of traveling</string>
    <string name="date_of_event">Date of event</string>
    <string name="time_start">time start</string>
    <string name="location">location</string>
    <string name="booking">Booking</string>
    <string name="price">price</string>
    <string name="details">Details</string>
    <string name="phone_number_event">Phone number event</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="developer_by">Developed by</string>
    <string name="san_sinath">San Sinath</string>
    <string name="ev_navin">Ev Navin</string>
    <string name="ly_chaovirun">Ly Chaovirun</string>
    <string name="contact_us">Contact us :</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="company">Company</string>
    <string name="time">Time</string>
    <string name="busid">BusID</string>
    <string name="destination">Destination</string>
    <string name="number_company">Number Company :</string>
    <string name="total">Total</string>
    <string name="search">Search</string>

    <string name="search_hint">Search name ,destination ,price</string>
    <string name="todo">TODO</string>
    <string name="send_to">Send to</string>
    <string name="more">More</string>
    <string name="notnow">Not now</string>
    <string name="set_source">Set source</string>
    <string name="set_destination">Set Destination</string>
    <string name="bus_ticket">Bus Ticket</string>
    <string name="hide">Hide</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="empty_recent_booking">Empty recent booking</string>
    <string name="no_ticket">No Ticket</string>

</resources>
