<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="1dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    app:cardElevation="3dp"
    app:contentPadding="2dp"
    app:contentPaddingLeft="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/imageURL"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            app:roundAsCircle="true"
            app:placeholderImage="@drawable/ic_user" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/imageURL"
            android:text="@string/name"
            android:textSize="20sp"
            android:layout_toEndOf="@id/imageURL" />

        <TextView
            android:id="@+id/txt_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtName"
            android:layout_toRightOf="@id/imageURL"
            android:text="@string/scr" />

        <TextView
            android:id="@+id/txt_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtName"
            android:layout_marginLeft="7dp"
            android:layout_toRightOf="@id/txt_to"
            android:text="@string/des" />

        <TextView
            android:id="@+id/txt_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtName"
            android:layout_marginLeft="7dp"
            android:layout_toRightOf="@id/txt_source"
            android:text="@string/to" />


        <TextView
            android:id="@+id/txtDateBooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_source"
            android:layout_toRightOf="@id/imageURL"
            android:text="@string/date" />

        <TextView
            android:id="@+id/txt_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_source"
            android:layout_marginLeft="7dp"
            android:layout_toRightOf="@id/txtDateBooking"
            android:text="@string/hour" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingRight="10dp">

            <Button
                android:id="@+id/btnBooking"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="end"
                android:background="@drawable/button_background"
                android:text="@string/booking"
                android:textColor="@android:color/white"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/price"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>