<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".setting.AboutActivity">

        <ImageView
            android:id="@+id/bus"
            android:layout_marginTop="50sp"
            android:layout_width="wrap_content"
            android:src="@drawable/bus_form_login_img"
            android:layout_height="150dp" />
        <TextView
            android:layout_marginTop="50dp"
            android:id="@+id/txtDev"
            android:layout_below="@id/bus"
            android:layout_width="wrap_content"
            android:text="@string/developer_by"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/t1"
            android:layout_below="@id/txtDev"
            android:layout_width="wrap_content"
            android:text="@string/san_sinath"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t1"
            android:layout_centerHorizontal="true"
            android:text="@string/ev_navin"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/t3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t2"
            android:layout_centerHorizontal="true"
            android:text="@string/ly_chaovirun"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/t4"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_below="@id/t3"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/contact_us"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/t5"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:layout_below="@id/t4"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:text="ebusteam.dev@gmail.com"
            android:layout_height="wrap_content" />

</RelativeLayout>