<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">

        <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="#ffffff"-->
            <!--android:src="@drawable/view_image" />-->

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/img_event"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:actualImageScaleType="fitXY"
            app:placeholderImage="@drawable/view_image" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="0.08"
        android:background="#ffffff"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/txt_tile_detail_vent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/title_of_traveling"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:textSize="23sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="0.15"
        android:background="#ffffff"
        android:padding="8dp">

        <ImageView
            android:id="@+id/icon_date_event"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/date_event_icon" />

        <TextView
            android:id="@+id/txt_date_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/icon_date_event"
            android:layout_toRightOf="@id/icon_date_event"
            android:text="@string/date_of_event"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@id/txt_date_event"
            android:src="@mipmap/time_stat_evnt_icon" />

        <TextView
            android:id="@+id/txt_time_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_date_event"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/icon_date_event"
            android:layout_toRightOf="@id/icon_date_event"
            android:text="@string/time_start"
            android:textSize="15sp" />
    <LinearLayout
        android:id="@+id/lyt_location"
        android:layout_below="@id/txt_time_start"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/location_event_detail" />

        <TextView
            android:id="@+id/txt_location_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/location"
            android:textSize="15sp" />
    </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="#ffffff"
        android:padding="7dp">

        <TextView
            android:id="@+id/txt_detil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textColor="#0d52ad"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/call_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/txt_detil"
            android:layout_toRightOf="@id/txt_detil"
            android:src="@mipmap/call_icon_event" />

        <TextView
            android:id="@+id/txt_phone_numbe_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/call_icon"
            android:textColor="@color/colorPrimary"
            android:layout_toRightOf="@id/call_icon"
            android:text="@string/phone_number_event" />
        <ScrollView
            android:id="@+id/svDetial"
            android:layout_below="@+id/txt_phone_numbe_event"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:id="@+id/txt_detail_all_event"
            android:layout_width="match_parent"
            android:textSize="15sp"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp" />

        </ScrollView>
    </RelativeLayout>


</LinearLayout>