<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#8a424340"
    android:orientation="vertical"
    tools:context=".recent.RecntlyActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="0.7"
        android:background="#ffffff">

        <ImageView
            android:id="@+id/cly_total"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/backgroudtota" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp"
            android:text="@string/total"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/money_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="T_Money"
            android:textColor="#119ffd"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txt_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cly_total"
            android:layout_marginLeft="20dp"
            android:text="@string/ticket"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_number_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView"
            android:layout_alignRight="@+id/textView"
            android:layout_below="@+id/cly_total"
            android:text="N_Ticket"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_sumtotal_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cly_total"
            android:layout_marginLeft="21dp"
            android:layout_marginStart="21dp"
            android:layout_toEndOf="@+id/txt_number_ticket"
            android:layout_toRightOf="@+id/txt_number_ticket"
            android:text="s_total"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_total_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txt_sumtotal_ticket"
            android:layout_alignBottom="@+id/txt_sumtotal_ticket"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:text="total"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/txt_name_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txt_number_company"
            android:layout_alignBottom="@+id/txt_number_company"
            android:layout_alignEnd="@+id/txt_total_ticket"
            android:layout_alignRight="@+id/txt_total_ticket"
            android:text="Number"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_number_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_ticket"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/number_company"
            android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:background="#ffffff"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:text="@string/company"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Source"
                android:textSize="15sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/destination"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Date"
                android:textSize="15sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/time"
                android:textSize="15sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/busid"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_name_company_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Company"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_source_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Source"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/detination_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/destination"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_date_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Dete"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/txt_time_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Time"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_idbus_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="BusID"
                android:textSize="15sp" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:background="#ffffff"
        android:gravity="center">

    </LinearLayout>


</LinearLayout>