<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/welcome_to_ebus"
            android:fontFamily="serif"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/txt_UserName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/background_rectangle_formlogin"
            android:hint="@string/username"
            android:paddingLeft="20dp" />

        <EditText
            android:id="@+id/txt_Gmail_Or_Phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_rectangle_formlogin"
            android:hint="@string/gmail_or_phone"
            android:paddingLeft="20dp" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_rectangle_formlogin"
            android:hint="User Name"
            android:paddingLeft="20dp" />

        <EditText
            android:id="@+id/txt_verifypassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_rectangle_formlogin"
            android:hint="Verify Password"
            android:paddingLeft="20dp" />

        <Button
            android:id="@+id/btn_Submit"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:text="Sign Up"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white" />

    </LinearLayout>
</LinearLayout>